--- a/Dockerfiles/Dockerfile
+++ b/Dockerfiles/Dockerfile
@@ -1,11 +1,11 @@
 # Base
-FROM node:12
+FROM mhart/alpine-node:12
 
 WORKDIR /app
 
 # Dependencies
 COPY package*.json ./
-RUN npm install
+RUN npm install && npm cache clean --force
 
 # Build
 COPY . .
